# TDDPy

./: .gitignore  MANIFEST.in  README.md  TddPy.sln  Test.ipynb  compare.py  doc.md  example.ipynb  readme.md  readme_dev.md  setup.cfg  tdd.sln  test.py
ctdd/: CUDAcpl.cpp  CUDAcpl.h  Node.cpp  Node.h  ThreadPool.h  cache.cpp  cache.hpp  config.h  ctdd.cpp  ctdd.h  ctdd.vcxproj  ctdd.vcxproj.filters  ctdd_linux.vcxproj  ctdd_linux.vcxproj.filters  ctddmodule.cpp  main_test.cpp  manage.cpp  manage.hpp  node.hpp  simpletools.h  stdafx.h  succ_ls.hpp  tdd.cpp  tdd.h  tdd.hpp  weight.cpp  weight.h  weight.hpp  weighted_node.cpp  weighted_node.h  weights.cpp  weights.h  wnode.cpp  wnode.hpp
ctdd/ctdd/: ctdd.vcxproj
ctdd/old_codes/: Node.h  cache.h  simpletools.cpp  simpletools.h  tdd.cpp  weighted_node.h  weights.cpp
ctdd/old_files/: ctddmodule.cpp  stdafx.h  tdd.cpp  weighted_node.cpp  weights.h
pytdd/: compare.py  example.ipynb  output  pytdd.pyproj  pytdd_test.py  test.py
pytdd/experiments/1D Heisenberg chain/: ground_state.py
pytdd/experiments/test_contract/: r_d2.csv  r_d5.csv  r_d5_c100.csv  test_contract _T_count.py  test_contract _T_width.py  test_contract.py
pytdd/experiments/test_order/: test_order.py
pytdd/pytdd/: __init__.py  abstract_coordinator.py  global_method.py  global_order_coordinator.py  interface.py  node.py  pytdd_test.py  tdd.py  trival_coordinator.py
pytdd/pytdd/CUDAcpl/: __init__.py  main.py  quantum_basic.py
pytdd/tdd/: node.py  tdd.py  weighted_node.py
pytdd/tdd_origin/: TN.py
src/: CMakeLists.txt  CMakePresets.json
src/ctdd/: CMakeLists.txt  ThreadPool.h  cache.h  cache.hpp  ctdd.h  ctddmodule.cpp  main.cpp  node.hpp  tdd.hpp  typing.hpp  weight.hpp  wnode.hpp
src/tddpy/: test.py
tdd/: __init__.py  global_val.py  methods.py  node.py  quantum_basic.py  tdd.py  weighted_node.py
tdd/CUDAcpl/: __init__.py  config.py  main.py  quantum_basic.py
tddpy/: example.ipynb  readme_test.py  tddpy.pyproj  tddpy_test.py  test.py
tddpy/experiments/1D Heisenberg chain/: ground_state.py
tddpy/experiments/test_contract/: r_d2.csv  r_d3_count.csv  r_d3_count_CUDA.csv  r_d3_count_torch.csv  r_d5.csv  r_d5_c100.csv  r_d5_size.csv  r_d7_count_server.csv  test_contract _T_count.py  test_contract _T_width.py  test_contract _thread.py  test_contract.py  test_contract_T_count.py  test_contract_T_count_CUDA.py  test_contract_width.py
tddpy/experiments/test_contract/thread_result_w6_d3/: gate_1_np_core.npy  gate_2_np_core.npy  r_d3_thread.csv
tddpy/experiments/test_order/: r_d2.csv  r_d4.csv  test_order.py
tddpy/tdd_origin/: TDD.py  TDD_Q.py  TN.py
tddpy/tddpy/: __init__.py  abstract_coordinator.py  global_method.py  global_order_coordinator.py  node.py  tdd.py  trival_coordinator.py
tddpy/tddpy/CUDAcpl/: CUDAcpl_Tensor.py  __init__.py  config.py  main.py  quantum_circ.py
