[metadata]
name = TddPy
version = 1.0b2
author = Yingte Xu
author_email = lucianoxu@foxmail.com
description = A decision diagram based backend for tensor calculation, which is especially suitable for quantum circuit simulation.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/UTS-QSI/TddPy
project_urls =
    First Article on TDD = https://arxiv.org/abs/2009.02618
keywords = tensor, quantum circuit, decision diagram
classifiers =
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Programming Language :: C++
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
package_dir = 
    = tddpy
packages = tddpy
install_requires =
    numpy
    torch
    graphviz
    IPython
    python_version >= "3.6";platform_system=='Windows'

[options.packages.find]
where = tddpy