[metadata]
name = TddPy
version = 1.0b23
author = Yingte Xu
author_email = lucianoxu@foxmail.com
description = A decision diagram based backend for tensor calculation, which is especially suitable for quantum circuit simulation.
long_description = file: Readme.md
long_description_content_type = text/markdown
url = https://github.com/UTS-QSI/TddPy
platform = Windows
keywords = tensor, quantum circuit, decision diagram
classifiers =
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Programming Language :: C++
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
project_urls =
    First Article on TDD = https://arxiv.org/abs/2009.02618

[options]
package_dir = 
    = tddpy
packages = find:
install_requires =
    numpy
    torch
    graphviz
    IPython
python_requires = >=3.9, <3.10


[options.package_data]
* = *.pyd

[options.packages.find]
where = tddpy